@@ -1,3 +1,15 @@
+2020-06-05  Jonathan Bedard  <jbedard@apple.com>
+
+        WebCore: Guard variable declarations on ENABLE(VIDEO_PRESENTATION_MODE)
+        https://bugs.webkit.org/show_bug.cgi?id=212831
+        <rdar://problem/64033028>
+
+        Reviewed by Tim Horton.
+
+        No new tests, no behavior changed.
+
+        * html/HTMLVideoElement.h:
+
 2020-06-05  Peng Liu  <peng.liu6@apple.com>
 
         Fix a tvOS build failure
